# project_2510-hualien_guangfu_backend

./: .dockerignore  .env.common  .env.dev  .env.dev-secrets  .env.example  .env.example-secrets  .env.prod  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  check.hurl  compose.docs.yml  compose.override.dev.yml  compose.override.prod.yml  compose.yml  gen_env.sh  install-just.sh  justfile  pyproject.toml
.github/workflows/: build-push-backend.yml  compose-build-retag.yaml  docker-build.yml
data/: 2025-10-04.hurl  2025-10-04.txt
src/backend/: Dockerfile  dev.py  initial_data.py  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 288b1fd6d1ff_.py  2ea09231b315_dev.py  33667d931cc3_.py  54d8a87ff965_.py  785d82d3818a_init.py  9592b1bccd96_fastapi_users.py  9b0c2f4f258d_fastcrud_demo.py  a3fc4b852691_.py  c0fe181ce3c8_.py  cd02d04a3f70_.py  d735321d2f5f_.py  fa4d7a3c2710_.py  ff0a714176fe_item.py
src/backend/app/: database.py  logger.py  main.py  users.py
src/backend/app/dependencies/: database_dependency.py  item_dependency.py  user_dependency.py
src/backend/app/enums/: task_claim_enum.py  task_enum.py
src/backend/app/models/: __init__.py  item_model.py  task_claim_model.py  task_model.py  user_model.py
src/backend/app/routers/: item_router.py  task_claim_router.py  task_router.py  user_router.py
src/backend/app/schemas/: item_schema.py  task_claim_schema.py  task_schema.py  user_schema.py
src/backend/app/settings/: app_setting.py  database_setting.py  setting.py  user_setting.py
