[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "alembic>=1.16.5",
  "asyncpg>=0.30",
  "email-validator>=2.2",
  "fastapi>=0.118",
  "fastapi-cli>=0.0.13",
  "fastapi-users[sqlalchemy]>=14.0.1",
  "fastcrud>=0.17",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.11.9",
  "pydantic-extra-types>=2.10.5",
  "pydantic-settings>=2.11",
  "python-multipart>=0.0.20",
  "sqlmodel>=0.0.25",
  "uvicorn>=0.37",
]
